# VolumioAmp

./: .gitignore  Opmerkingen.txt  README.md
pcb/: Amplifier.kicad_sch  BOM.xlsx  CM4_Ethernet.kicad_sch  CM4_HighSpeed.kicad_sch  I2STest.kicad_sch  Power.kicad_sch  USB_Sound.kicad_sch  VolumioAmp.kicad_pcb  VolumioAmp.kicad_pro  VolumioAmp.kicad_sch
pcb/Libraries/Footprints/: BEL_L829-1J1T-43.kicad_mod  GCT_USB4500-03-0-A_REVA.kicad_mod  QFN50P900X900X90-65N.kicad_mod  SOP65P780X200-20N.kicad_mod  TQFP32-08.kicad_mod  logo.kicad_mod
pcb/Libraries/Symbols/: L829-1J1T-43.kicad_sym  MA12040PXUMA1.kicad_sym  PCM2706.kicad_sym  USB4500-03-0-A_REVA.kicad_sym  WM8804GEDS_V.kicad_sym
software/rpi/: .gitignore  AmpControl.code-workspace  CMakeLists.txt  bootstrap
software/rpi/AmpControlApp/: CMakeLists.txt
software/rpi/AmpControlApp/src/: Main.cpp
software/rpi/AmpControlLib/: CMakeLists.txt
software/rpi/AmpControlLib/src/lib/: Gpio.cpp  Gpio.h  GpioIf.h  GpioListenerIf.h  I2C.cpp  I2C.h  I2CIf.h  MA12040P.cpp  MA12040P.h  Utilities.cpp  Utilities.h
software/rpi/AmpControlTest/: CMakeLists.txt
software/rpi/AmpControlTest/src/: MA12040PTest.cpp
software/rpi/AmpControlTest/src/Mock/: GpioIfMock.h  I2CIfMock.h
software/rpi/build-arm/: toolchain-arm.cmake
software/rpi/build-x86/: toolchain-x86.cmake
software/rpi/libraries/: build
testpcb/MA12040PTest/: MA12040PTest.kicad_pcb  MA12040PTest.kicad_pro  MA12040PTest.kicad_sch  _autosave-MA12040PTest.kicad_pcb
testpcb/MA12040PTest/Libraries/Footprints/: GCT_USB4085-GF-A_REVB.kicad_mod  SOIC8_208MIL_CYP-L.kicad_mod  SOIC8_208MIL_CYP-M.kicad_mod  SOIC8_208MIL_CYP.kicad_mod
testpcb/MA12040PTest/Libraries/Symbols/: S25FL064LABMFI010.kicad_sym
